--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>PRO Card - Material Resume / CV / vCard Template</title>
+    <title>Majid Sepanj Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="PRO Card - Material Resume / CV / vCard Template" />
+    <meta name="description" content="Majid Sepanj Resume" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta name="author" content="lmtheme" />
     <link rel="shortcut icon" href="favicon.ico">
@@ -126,7 +126,8 @@
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
                         </div>
-                        <p>Hello! I’m Majid Reza Sepanj. Proactive and highly skilled Programmer and Software Project Manager with 22 years’ track record in the field of Information and Technology. Areas of expertise include analysis, design and development of Windows and Web based software.</p>
+                        <p>Hello! I’m Majid Reza Sepanj. Proactive and highly skilled Programmer and Software Project Manager with 22 years’ track record in the field of Information and Technology. Areas of expertise include analysis, design and development of Windows and Web based software.
+</p>
                       </div>
                       <div class="download-resume">
                         <a href="MadjidSepanj_Resume.pdf" class="btn btn-secondary">Download Resume</a>
@@ -199,7 +200,8 @@
                             <span class="item-period">September 2013 - Present</span>
                             <span class="item-small">Pasargad Technology Leaders.</span>
                             <p class="item-description">The company is active in the field of launching organizational portals and developing modules and software in DNN environment, a Persian DNN reference in Iran. Responsibilities include designing, managing, and programming software projects.</p>
-			    <p class="item-description">Contributed to the following projects as: </p>
+			    <p class="item-description">Contributed to the following projects as: 
+</p>
 			    <ul>
 				<li>Programmer and Project Manager of the management system for workers of Fruit & Vegetables Market</li>
 				<li>Programer of a contractor management system for a procurement company affiliated with the Meli Bank</li>
@@ -223,7 +225,8 @@
                           <!-- Experience 2 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Project Manager &amp; Senior Programmer</h4>
-                            <span class="item-period">July 2007 - December 2017</span>
+                            <span class="item-period">July 2007 - December 2017
+</span>
                             <span class="item-small">Rayavaran Tose'e Company.</span>
                             <p class="item-description">The company was the largest hospital software developer active in the field of software projects design, managment, and implementation. </p>
 			    <p class="item-description">Contributed to the following projects as:</p>
@@ -232,7 +235,8 @@
 				<li>Designer and Programmer of pharmacy software project</li>
 				<li>Progarmer of integrated information system of hospital</li>
 				<li>Designer and Programmer of accounting, warehousing, rollcalling, wages, procurement, application management, equipment mobilization, secretary, and property software package</li>
-				<li>Designer and Programmer of drug information and interaction</li>
+				<li>Designer and Programmer of drug information and interaction
+</li>
 			    </ul>
                           </div>
                           <!-- / Experience 2 -->
@@ -240,9 +244,11 @@
                           <!-- Experience 3 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Hardware Administor - Software Designer &amp; Programmer</h4>
-                            <span class="item-period">March 2005 - July 2007</span>
+                            <span class="item-period">March 2005 - July 2007
+</span>
                             <span class="item-small">Barin Choob Company.</span>
-                            <p class="item-description">The company is the largest importer of machinery and raw materials of the wood industry in Iran. Responsibilities include providing and maintaining hardware and network equipment, maintaining existing software and databases, and designing, managing, and implementing the software required by the Brin Group.</p>
+                            <p class="item-description">The company is the largest importer of machinery and raw materials of the wood industry in Iran. Responsibilities include providing and maintaining hardware and network equipment, maintaining existing software and databases, and designing, managing, and implementing the software required by the Brin Group.
+</p>
 			    <p class="item-description">Contributed to the following projects as:</p>
 			    <ul>
 				<li>Designer and Programmer of web-based personnel Information and wages software</li>
@@ -260,7 +266,8 @@
                             <span class="item-small">Deputy Traffic Police Office (NAJA).</span>
 			    <p class="item-description">Responsibilities include:</p>
 			    <ul>
-				<li>consulting on the selection and provision of network and hardware equipment</li>
+				<li>consulting on the selection and provision of network and hardware equipment
+</li>
 				<li>Periodic maintenance of network and hardware equipment</li>
 				<li>Launching some of the first deployment centers out of Traffic Police department as the early Police +10 services</li>
 			    </ul>
@@ -337,7 +344,8 @@
                             <div class="skill-percentage skill-5"></div>
                           </div> 
 
-                          <h4>Web API</h4>
+                          <h4>Web API
+</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
                           </div> 
